Wrap 'more stats?' in yellow box

--- a/src/templates/body.html
+++ b/src/templates/body.html
@@ -64,11 +64,11 @@
           >
             <!-- BODY CONTAINER -->
             {% include 'body_section_welcome.html' %}
-            {% include 'body_section_donate.html' %}
+            {% include 'body_section_yellow_donate.html' %}
             {% for section in sections_data %}
               {% include 'body_section_data.html' %}
             {% endfor %}
-            {% include 'body_section_dash.html' %}
+            {% include 'body_section_yellow_dash.html' %}
             {% include 'body_section_footnote.html' %}
             <!-- END BODY CONTAINER -->
           </td>
