--- a/src/templates/footer.html
+++ b/src/templates/footer.html
@@ -450,8 +450,7 @@
                           <br>
                           You're receiving this email because you
                           signed up for updates about Spotlight
-                          PA's journalism.&nbsp;<br>
-                          <a href="{{ unsubscribe_preferences_link }}" style="
+                          PA's journalism. <a href="{{ unsubscribe_preferences_link }}" style="
                               mso-line-height-rule: exactly;
                               -ms-text-size-adjust: 100%;
                               -webkit-text-size-adjust: 100%;
