--- a/src/templates/body.html
+++ b/src/templates/body.html
@@ -64,6 +64,7 @@
           >
             <!-- BODY CONTAINER -->
             {% include 'body_section_welcome.html' %}
+            {% include 'body_section_stories.html' %}
             {% include 'body_section_yellow_donate.html' %}
             {% for section in sections_data %}
               {% include 'body_section_data.html' %}
