Replace sendgrid unsubscribe with custom spotlight link

--- a/src/templates/footer.html
+++ b/src/templates/footer.html
@@ -450,19 +450,36 @@
                           <br>
                           You're receiving this email because you
                           signed up for updates about Spotlight
-                          PA's journalism. <a href="{{ unsubscribe_preferences_link }}" style="
-                              mso-line-height-rule: exactly;
-                              -ms-text-size-adjust: 100%;
-                              -webkit-text-size-adjust: 100%;
-                              color: #ffffff;
-                              font-weight: normal;
-                              text-decoration: underline;
-                            ">Unsubscribe</a> from this list.
+                          PA's journalism.
+                          You can manage
+                          <a href="{{spotlight_unsubscribe_link}}"
+                                style="
+                                      mso-line-height-rule: exactly;
+                                      -ms-text-size-adjust: 100%;
+                                      -webkit-text-size-adjust: 100%;
+                                      color: #ffffff;
+                                      font-weight: normal;
+                                      text-decoration: underline;
+                                    "
+                        >your preferences and unsubscribe</a>
+                          or <a
+                              href="{{sg_unsubscribe_preferences_link}}"
+                              style="
+                                    mso-line-height-rule: exactly;
+                                    -ms-text-size-adjust: 100%;
+                                    -webkit-text-size-adjust: 100%;
+                                    color: #ffffff;
+                                    font-weight: normal;
+                                    text-decoration: underline;
+                                  "
+                        >never receive emails</a> from
+                          Spotlight PA again.
                         </td>
                       </tr>
                     </tbody>
                   </table>
                   <!--[if mso]>
+
 </td>
 <![endif]-->
 
@@ -484,3 +501,5 @@
                       <![endif]-->
   </td>
 </tr>
+<!-- <a href="{{ sg_unsubscribe_preferences_link }}">sendgrid default preferences link</a> -->
+<!-- <a href="{{ sg_unsubscribe_link }}">sendgrid default unsubscribe link</a> -->
