Add new promo: PA2020

--- a/src/templates/body_section_promo1.html
+++ b/src/templates/body_section_promo1.html
@@ -6,7 +6,7 @@
         </a>
 
         <div class="promo1__tagline">
-            <a href="{{promos.1.url}}" target="_blank">{{ promos.1.tagline }}</a>
+            <span>{{ promos.1.tagline }}</span>
         </div>
         <hr class="promo__divider-bottom">
     </div>
