--- a/src/templates/styles/index.css
+++ b/src/templates/styles/index.css
@@ -473,6 +473,7 @@
     }
 
     .promo__container {
+        text-align:center;
         padding-bottom: 6px;
     }
 
@@ -492,13 +493,13 @@
     .promo1__tagline {
         margin-top: 6px;
         font-size: 16px;
-        text-align: left;
+        text-align: center;
     }
 
     @media only screen and (max-width: 480px){
         .promo1__img{
             height:auto !important;
-            max-width: 600px !important;
+            max-width: 300px !important;
             width: 100% !important;
         }
     }
