--- a/src/templates/body_section_promo1.html
+++ b/src/templates/body_section_promo1.html
@@ -2,7 +2,7 @@
     <div class="promo__container">
         <hr class="promo__divider-top">
         <a href="{{ promos.1.url }}" target="_blank">
-             <img alt="promo1" src="{{ promos.1.image_path }}" class="promo1__img"/>
+             <img alt="promo1" src="{{ promos.1.image_path }}" class="promo__img promo1__img"/>
         </a>
         {% if promos.1.tagline %}
         <div class="promo1__tagline">
