--- a/src/templates/styles/index.css
+++ b/src/templates/styles/index.css
@@ -496,10 +496,14 @@
         text-align: center;
     }
 
+    .promo__img {
+        max-width: 600px;
+    }
+
     @media only screen and (max-width: 480px){
         .promo1__img{
             height:auto !important;
-            max-width: 300px !important;
+            max-width: {{ promos.1.image_width }} !important;
             width: 100% !important;
         }
     }
