Add feedback callout

--- a/src/templates/body.html
+++ b/src/templates/body.html
@@ -64,6 +64,7 @@
           >
             <!-- BODY CONTAINER -->
             {% include 'body_section_welcome.html' %}
+            {% include 'body_section_yellow_feedback.html' %}
             {% include 'body_section_stories.html' %}
             {% with promo = promos.1 %}
               {% include 'body_section_promo_wrapped.html' %}
