Add farewell note

--- a/src/templates/body_section_welcome.html
+++ b/src/templates/body_section_welcome.html
@@ -1,5 +1,7 @@
 {% extends 'body_section.html' %}
 
 {% block content %}
+{% include "note.html" %}
+
 <p class="welcome__text-container">{{ section_welcome }}</p>
 {% endblock %}
